# diet-tracker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATABASE_DOWNLOAD.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  download_production_db.ps1  download_production_db.py
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  exercise_groups.py  exercise_history.py  exercise_loads.py  exercise_protection.py  llm.py  macro_targets.py  macros.py  main.py  models.py  planner.py  planner_groups.py  planner_workflow.py  recovery_check_ins.py  reference_exercises.py  rehab_protocols.py  seed_tissues.py  strength_model.py  tissue_regions.py  tracked_tissues.py  training_model.py  usda.py  workout_queries.py  workout_tools.py
backend/app/llm_tools/: __init__.py  nutrition.py  shared.py  workout.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_dashboard.py  test_database.py  test_database_download.py  test_database_updates.py  test_exercise_groups.py  test_exercise_history.py  test_exercises_router.py  test_foods.py  test_llm_models.py  test_llm_streaming.py  test_llm_tool_calling.py  test_macro_targets.py  test_meal_items.py  test_meals.py  test_merge_exercises.py  test_parse.py  test_plan_crud.py  test_planner.py  test_planner_workflow.py  test_recipes.py  test_rep_completion.py  test_strength_model.py  test_tissue_conditions_tool.py  test_tissue_readiness.py  test_tissue_regions.py  test_tissues_router.py  test_training_model.py  test_training_model_router.py  test_workout_sets.py
(+107 files in other folders)
