[project]
name = "diet-tracker-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/strength_model.py" = ["N802", "N803", "N806"]
"tests/test_strength_model.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
